--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url(./img/background.png);
+    background-image: url(./img/background.png) ;
     background-size: cover;
 }
 
@@ -14,11 +14,20 @@ body {
     border: 4px solid #fff;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
     position: relative;
+    overflow: hidden;
 }
 
 #container {
     width: 800px;
     height: 400px;
+}
+
+.photo {
+    width: 800px;
+    height: 400px;
+    margin: 0;
+    display: inline-block;
+    background-size: cover;
 }
 
 .bouton {
